[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/EnemyFSM.gd" type="Script" id=1]
[ext_resource path="res://components/Health/Health.gd" type="Script" id=2]
[ext_resource path="res://components/FSM.gd" type="Script" id=3]
[ext_resource path="res://components/Health/DamageLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/Movement.gd" type="Script" id=5]

[node name="EnemyFSM" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Movement" type="Node" parent="."]
script = ExtResource( 5 )
walk_speed = 100
max_speed = Vector2( 300, 700 )
friction = 500
gravity = 1500
jump_force = 2000
bodyPath = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Health" type="Node" parent="."]
script = ExtResource( 2 )
damage_label = ExtResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="Sprites" type="Node2D" parent="."]

[node name="FSM" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="FSM"]
margin_top = -64.7285
margin_right = 40.0
margin_bottom = -50.7285
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="died" from="Health" to="." method="_on_Health_died"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
